# id-generator

./: Cargo.toml  README.md
.history/: Cargo_20220708001013.toml  Cargo_20220708001029.toml  README_20220708002213.md  README_20220708002248.md
.history/examples/: basic53_20220707235054.rs  basic53_20220707235058.rs  basic53_20220707235204.rs  basic53_20220707235237.rs  basic53_20220707235855.rs  basic53_20220707235921.rs  basic_20220707232127.rs  basic_20220707233952.rs  basic_20220708002245.rs
.history/src/: lib_20220707234034.rs  snowflake53_20220707234009.rs  snowflake53_20220707234628.rs  snowflake53_20220707234955.rs  snowflake53_20220707235800.rs  snowflake53_20220707235855.rs  snowflake53_20220707235921.rs  snowflake_20220707233952.rs
examples/: basic.rs  multi_thread.rs
src/: lib.rs  snowflake.rs
