[package]
name = "id-generator"
version = "0.1.0"
edition = "2021"
description = "generate id"
repository = "https://github.com/get200/id-generator"
homepage = "https://github.com/get200/id-generator"
keywords = ["id", "generator", "snowflake"]
readme = "README.md"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.19"
log = "0.4.14"
